emoji spacing fix

--- a/index.css
+++ b/index.css
@@ -152,7 +152,7 @@ ul {
 
 .emoji-background {
     border: 15px solid #fbf2ea;
-    width:30%;
+    width:50%;
     margin:auto;
     text-align: center;
     background-color: #fbf2ea;
@@ -162,8 +162,8 @@ ul {
 
 #emoji-1, #emoji-2, #emoji-3{
     display: inline-block;
-    padding-left: 6%;
-    padding-right: 6%;
+    padding-left: 2%;
+    padding-right: 2%;
     padding-top: 20px;
     padding-bottom: 20px;
     vertical-align: middle;
@@ -184,3 +184,4 @@ ul {
   background-color: white;
   border-radius: 20px;
 }
+
